name:                services-haskell
version:             0.1.0.0
synopsis:            Monto Services for Haskell
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@googlemail.com
copyright:           Copyright (c) 2015, Sven Keidel
category:            Editor
build-type:          Simple
cabal-version:       >=1.10

data-files:
  assets/*.png

executable services-haskell
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Tokens,
                       SourceSpan,
                       Util,
                       ErrorMessages,
                       AST,
                       Outline
  build-depends:       base,
                       bytestring,
                       directory,
                       monto-broker,
                       ghc,
                       ghc-paths,
                       text,
                       aeson,
                       vector,
                       containers,
                       syb,
                       time,
                       unix,
                       zeromq4-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010